--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,8 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
-  
-media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+
+# Uncomment below to enable drafts
+# publish_mode: editorial_workflow
+
+media_folder: "static/img" # Media files will be stored in the repo under images/uploads
